Fix homepage tile spacing
The text and tiles were previously a little bit cramped.

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -641,6 +641,7 @@ a:not([href]) {
   color: #aaa; }
 
 .landing-page .landing-page__tutorial {
+  margin: 16px 0 10px;
   width: 100%; }
 .landing-page .landing-page__tutorial--tile {
   display: inline-flex;
@@ -3546,10 +3547,10 @@ button.cursorNorm {
 hr.faded {
   border: 0;
   height: 1px;
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-  background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); }
+  background-image: -webkit-linear-gradient(left, transparent, rgba(0, 0, 0, 0.75), transparent);
+  background-image: -moz-linear-gradient(left, transparent, rgba(0, 0, 0, 0.75), transparent);
+  background-image: -ms-linear-gradient(left, transparent, rgba(0, 0, 0, 0.75), transparent);
+  background-image: -o-linear-gradient(left, transparent, rgba(0, 0, 0, 0.75), transparent); }
 
 hr.shaded {
   height: 12px;
